--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -2,10 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  color: greenyellow;
   font-size: 1.2rem;
   font-weight: 575;
-  padding: 32px 16px;
-  width: 100%;
+  padding: 0px 16px;
   background-color: mediumslateblue;
-  color: greenyellow;
+  border: none;
+  border-radius: 10px;
 }
