--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,7 +1,13 @@
 .footer {
-  display: flex;
+  /* display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
+  /* position: fixed;
+  left: 0;
+  bottom: 0; */
+  margin-top: auto;
+  text-align: center;
+  width: 100%;
   color: greenyellow;
   font-size: 1.2rem;
   font-weight: 575;
