--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 0 auto 1rem;
+  flex-wrap: wrap;
   padding: 0px 16px;
   color: greenyellow;
   background-color: mediumslateblue;
@@ -26,7 +26,6 @@
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-  flex-wrap: wrap;
   padding: 0;
 }
 
@@ -43,4 +42,5 @@
 
 .link:hover {
   color: rgb(245, 255, 230);
+  text-decoration: underline;
 }
