--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
+  margin: 8px;
   padding: 0px 16px;
   color: greenyellow;
   background-color: mediumslateblue;
