--- a/src/components/LinkList.module.css
+++ b/src/components/LinkList.module.css
@@ -1,5 +1,5 @@
 .linkList {
-  max-width: 1250px;
+  /* max-width: 1250px;
   margin-right: auto;
   margin-left: auto;
   padding-right: 10px;
@@ -10,14 +10,22 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  gap: 10px 20px;
+  gap: 10px 20px; */
+  padding-right: 10px;
+  padding-left: 10px;
+  list-style: none;
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  justify-items: center;
+  min-height: 75vh;
 }
 
-.linkLink {
+.listLink {
   font-size: 2rem;
   text-decoration: none;
 }
 
-.linkLink:hover {
+.listLink:hover {
   color: greenyellow;
 }
