add transition to button hover

--- a/src/pages/AddLink.module.css
+++ b/src/pages/AddLink.module.css
@@ -30,6 +30,7 @@ input {
 
 button {
   background-color: mediumslateblue;
+  transition: background-color 0.3s ease;
   border: none;
   border-radius: 15px;
   margin-top: 8px;
